<resources>
    <string name="app_name">MadLevel5Task2</string>
    <string name="action_settings">Settings</string>
    <string name="Title">Title</string>
    <string name="Platform">Platform</string>
    <string name="Day">Day</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="first_fragment_label">GameBacklogFragment</string>
    <string name="second_fragment_label">AddGameFragment</string>
    <string name="GameBacklog">Game Backlog</string>
    <string name="AddGame">Add Game</string>
    <string name="removed_game">remove game</string>
    <string name="undo">undo</string>
</resources>